crud user + switch user + csrf + remember me + form_login provider + login private provider + notifcation + sign in with microsoft 👌👌👌😊

--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=5e8be86f0cd782dbe64c5c0fcbb88a3d
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://rakcha:rakchaRootPass@mysql-rakcha.alwaysdata.net:3306/rakcha_db"
+DATABASE_URL="mysql://root@127.0.0.1:3306/rakcha"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -38,3 +38,14 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+MAILER_DSN=gmail://ammari.ali.0001@gmail.com:cakngdtblhocjivh@default
+###< symfony/google-mailer ###
+
+###> hwi/oauth-bundle ###
+MICROSOFT_LIVE_ID=377311a4-cc95-4310-9050-4ee51210df1c
+MICROSOFT_LIVE_SECRET=l-O8Q~dqfZEjPicl8Sxb8GEAqedp6q7WqgWcMb5i
+###< hwi/oauth-bundle ###
