--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
     "doctrine/doctrine-bundle": "^2.10",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.16",
-    "easycorp/easyadmin-bundle": "^4.9",
+    "hwi/oauth-bundle": "^2.2",
+    "knplabs/knp-paginator-bundle": "^5.9",
+    "php-flasher/flasher-noty-symfony": "^1.15",
     "php-flasher/flasher-symfony": "^1.15",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.24",
+    "sensio/framework-extra-bundle": "^6.2",
     "symfony/asset": "5.4.*",
-    "symfony/asset-mapper": "6.3.*",
     "symfony/console": "5.4.*",
     "symfony/doctrine-messenger": "5.4.*",
     "symfony/dotenv": "5.4.*",
@@ -25,12 +27,15 @@
     "symfony/flex": "^1.17|^2",
     "symfony/form": "5.4.*",
     "symfony/framework-bundle": "5.4.*",
+    "symfony/google-mailer": "5.4.*",
     "symfony/http-client": "5.4.*",
     "symfony/intl": "5.4.*",
     "symfony/mailer": "5.4.*",
     "symfony/mime": "5.4.*",
     "symfony/monolog-bundle": "^3.0",
     "symfony/notifier": "5.4.*",
+    "symfony/password-hasher": "5.4.*",
+    "symfony/polyfill-apcu": "^1.29",
     "symfony/process": "5.4.*",
     "symfony/property-access": "5.4.*",
     "symfony/property-info": "5.4.*",
@@ -45,6 +50,7 @@
     "symfony/validator": "5.4.*",
     "symfony/web-link": "5.4.*",
     "symfony/yaml": "5.4.*",
+    "symfonycasts/verify-email-bundle": "^1.17",
     "twig/extra-bundle": "^2.12|^3.0",
     "twig/twig": "^2.12|^3.0"
   },
@@ -94,10 +100,12 @@
   "extra": {
     "symfony": {
       "allow-contrib": false,
-      "require": "5.4.*"
+      "require": "5.4.*",
+      "docker": false
     }
   },
   "require-dev": {
+    "doctrine/doctrine-fixtures-bundle": "^3.5",
     "phpunit/phpunit": "^9.5",
     "rector/rector": "^1.0",
     "symfony/browser-kit": "5.4.*",
@@ -106,6 +114,7 @@
     "symfony/maker-bundle": "^1.0",
     "symfony/phpunit-bridge": "^7.0",
     "symfony/stopwatch": "5.4.*",
-    "symfony/web-profiler-bundle": "5.4.*"
+    "symfony/web-profiler-bundle": "5.4.*",
+    "zenstruck/foundry": "^1.37"
   }
 }
